# sosumi-7

./: .gitignore  CLAUDE.md  Cargo.toml  EMCORE_FEATURE_CONTRACT.md
crates/eaglemode/: Cargo.toml  build.rs
crates/eaglemode/benches/: scaled_tree.rs  scaled_tree_iai.rs
crates/eaglemode/src/: main.rs
crates/eaglemode/tests/: subview_dump_integration.rs
crates/emcore/: Cargo.toml
crates/emcore/src/: emATMatrix.rs  emAlignment.rs  emAlignmentRec.rs  emArray.rs  emArrayRec.rs  emAvlTreeMap.rs  emAvlTreeSet.rs  emBoolRec.rs  emBorder.rs  emButton.rs  emCheckBox.rs  emCheckButton.rs  emClipboard.rs  emColor.rs  emColorField.rs  emColorFieldFieldPanel.rs  emColorRec.rs  emConfigModel.rs  emContext.rs  emCoreConfig.rs  emCoreConfigPanel.rs  emCrossPtr.rs  emCtrlSocket.rs  emCtrlSocket.rust_only  emCursor.rs  emDialog.rs  emDoubleRec.rs  emEngine.rs  emEngineCtx.rs  emEngineCtx.rust_only  emEnumRec.rs  emErrorPanel.rs  emFileDialog.rs  emFileModel.rs  emFilePanel.rs  emFileSelectionBox.rs  emFileStream.rs  emFlagsRec.rs  emFontCache.rs  emFpPlugin.rs  (+79 more)
crates/emcore/tests/: emrec_compound_integration.rs  emrec_config_loadandsave.rs  emrec_persistence_bool_roundtrip.rs  emrec_persistence_cpp_compat.rs  emrec_persistence_roundtrip.rs  f010_h1_clear_recording.rs  f010_p8_zero_area.rs  f018_iv3_svpchoice_invalidation.rs  f018_v1_loading_background.rs  fu005_file_state_signal.rs  no_wire_b002_emrecfilemodel.rs  no_wire_b004_emcore.rs  notice_dispatch_reach.rs  plugin_config.rs  plugin_invocation.rs  polling_b015.rs  rc_shim_b010.rs  typed_subscribe_b007.rs
crates/emfileman/: Cargo.toml
crates/emfileman/src/: emDirEntry.rs  emDirEntryAltPanel.rs  emDirEntryPanel.rs  emDirFpPlugin.rs  emDirModel.rs  emDirPanel.rs  emDirStatFpPlugin.rs  emDirStatPanel.rs  emFileLinkFpPlugin.rs  emFileLinkModel.rs  emFileLinkPanel.rs  emFileManConfig.rs  emFileManControlPanel.rs  emFileManModel.rs  emFileManSelInfoPanel.rs  emFileManTheme.rs  emFileManViewConfig.rs  lib.rs
crates/emfileman/tests/: typed_subscribe_b005.rs  typed_subscribe_b016.rs  typemismatch_b009.rs
crates/emstocks/: Cargo.toml
crates/emstocks/src/: emStocksConfig.rs  emStocksControlPanel.rs  emStocksFetchPricesDialog.rs  emStocksFileModel.rs  emStocksFilePanel.rs  emStocksFpPlugin.rs  emStocksItemChart.rs  emStocksItemPanel.rs  emStocksListBox.rs  emStocksPricesFetcher.rs  emStocksRec.rs
crates/emstocks/tests/: dialog_signals_b013.rs  fetcher_engine_b001_followup_phase_e.rs  polling_b017.rs  typed_subscribe_b001.rs
crates/emtest/: Cargo.toml
crates/emtest/src/: emTestPanel.rs  lib.rs
zuicchini/: CONVERGENCE_HARNESS.md  CONVERGENCE_PLAN.yaml  Cargo.toml  DIVERGENCE_INDEX.yaml  FIX_HARNESS.md  GOLDEN_PARITY_EXPANSION.md  PARITY_HARNESS.md  TESTING_OPPORTUNITIES.md  TODO.md  VERIFICATION_HARNESS.md  VERIFICATION_RESULTS_MINUS_PAINTER.md
zuicchini/.workflow/widget-comparison/: run-log.md
zuicchini/_fix/: design_decisions.yaml  triage.yaml  triage_testpanel_deferred.yaml
zuicchini/_fix/baselines/: emPanel.round1.yaml  emScheduler.round1.yaml  emSignal_emTimer.round1.yaml  emTextField.round1.yaml  emViewAnimator.round1.yaml  emViewInputFilter.round1.yaml
zuicchini/_fix/changes/: animator.yaml  input_filter.yaml  panel_tree.yaml  scheduler_core.yaml  scheduler_timer.yaml  text_field.yaml
zuicchini/examples/: bench_interaction.rs  profile_hotpaths.rs  profile_testpanel.rs  test_pack_layout.rs  test_panel.rs  test_toolkit.rs  toolkit_demo.rs
zuicchini/golden_gen/: Makefile  gen_golden.cpp  golden_format.h
zuicchini/prompts/: master-contract.json
zuicchini/prompts/9b-contract/: feature-contract.json
zuicchini/src/emCore/: emBorder.rs  emCheckBox.rs  emColor.rs  emColorField.rs  emColorFieldFieldPanel.rs  emCoreConfig.rs  emCoreConfigPanel.rs  emDialog.rs  emFilePanel.rs  emFontCache.rs  emFpPlugin.rs  emImageFile.rs  emImageFileImageFilePanel.rs  emInstallInfo.rs  emLabel.rs  emMiniIpc.rs  emPainter.rs  emPainterDrawList.rs  emProcess.rs  emRadioBox.rs  emRadioButton.rs  emScalarField.rs  emTiling.rs  emTunnel.rs  emView.rs  emViewAnimator.rs  proofs_layer3.rs
zuicchini/src/foundation/: fixed.rs  image.rs  mini_ipc.rs  mod.rs  rect.rs
zuicchini/src/layout/: linear.rs  mod.rs  pack.rs  raster.rs
zuicchini/src/model/: clipboard.rs  context.rs  file_model.rs  fp_plugin.rs  mod.rs
zuicchini/src/panel/: animator.rs  behavior.rs  ctx.rs  input_filter.rs  mod.rs  sub_view_panel.rs  tree.rs  view.rs
zuicchini/src/render/: font_cache.rs  interpolation.rs  mod.rs  painter.rs  scanline.rs  stroke.rs  texture.rs
zuicchini/src/scheduler/: core.rs  engine.rs  timer.rs
zuicchini/src/widget/: border.rs  button.rs  check_box.rs  check_button.rs  color_field.rs  core_config_panel.rs  dialog.rs  field_panel.rs  label.rs  list_box.rs  look.rs  mod.rs  radio_box.rs  radio_button.rs  scalar_field.rs  splitter.rs  text_field.rs  toolkit_images.rs  tunnel.rs
zuicchini/src/window/: app.rs  zui_window.rs
zuicchini/state/: parity_harness.md  post_r15.jsonl  post_r21_widget_canvas.jsonl  session_context.json
zuicchini/state/run_001/: feature_list.json  progress.txt  system_state.json
zuicchini/state/run_003/: bug_forensics.json  mouse_anim_params_diagnosis.json
zuicchini/tests/: integration_input.rs  integration_layout.rs  integration_lifecycle.rs  integration_mutation.rs  integration_signals.rs  model_test.rs  panel_test.rs  parity_PORT_0089.rs  parity_PORT_0200.rs  parity_PORT_0201.rs  parity_PORT_0214.rs  parity_PORT_0215.rs  parity_PORT_0216.rs  parity_PORT_0217.rs  parity_PORT_0218.rs  parity_PORT_0220.rs  parity_PORT_0222.rs  parity_PORT_0224.rs  parity_PORT_0225.rs  parity_PORT_0257.rs  parity_PORT_0258.rs  parity_PORT_0259.rs  parity_PORT_0260.rs  parity_PORT_0261.rs  parity_PORT_0262.rs  parity_PORT_0263.rs  parity_PORT_0264.rs  parity_PORT_0265.rs  parity_PORT_0294.rs  parity_PORT_0295.rs  parity_PORT_0296.rs  parity_PORT_0297.rs  parity_PORT_0298.rs  parity_PORT_0299.rs  parity_PORT_0300.rs  parity_PORT_0301.rs  parity_PORT_0302.rs  parity_PORT_0303.rs  parity_PORT_0304.rs  render_test.rs
(+843 files in other folders)
