[workspace]
members = [
    "crates/emcore",
    "crates/emfileman",
    "crates/emstocks",
    "crates/emmain",
    "crates/eaglemode",
    "crates/test_plugin",
    "crates/xtask",
    "harness",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
emcore = { path = "crates/emcore" }
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2.183"
libloading = "0.9.0"
log = "0.4"
nix = { version = "0.31.2", features = ["fs"] }
pollster = "0.4"
slotmap = "1"
wgpu = "28"
winit = "0.30"
zbus = "5"
rand = "0.9"
criterion = { version = "0.8", features = ["html_reports"] }
gungraun = "0.17"
tempfile = "3"
arboard = "3"
open = "5"

[profile.release]
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
debug = true
