[package]
name = "zuicchini"
version = "0.1.0"
edition = "2021"
description = "A zoomable UI framework inspired by Eagle Mode's emCore"
license = "MIT"

[dev-dependencies]
rand = "0.9"

[dependencies]
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2.183"
libloading = "0.9.0"
log = "0.4"
nix = { version = "0.31.2", features = ["fs"] }
pollster = "0.4"
slotmap = "1"
wgpu = "28"
winit = "0.30"
