[package]
name = "eaglemode"
version = "0.1.0"
edition = "2021"
description = "Eagle Mode — zoomable user interface"

[lints]
workspace = true

[dependencies]
emcore = { workspace = true }
emmain = { path = "../emmain" }
winit = { workspace = true }

[dev-dependencies]
emcore = { workspace = true, features = ["test-support"] }
emfileman = { path = "../emfileman" }
emstocks = { path = "../emstocks" }
rand = { workspace = true }
slotmap = { workspace = true }
criterion = { workspace = true }
gungraun = { workspace = true }

[[bench]]
name = "interaction"
harness = false

[[bench]]
name = "interaction_iai"
harness = false

[[bench]]
name = "scaled_tree"
harness = false

[[bench]]
name = "scaled_tree_iai"
harness = false
