[package]
name = "eaglemode"
version = "0.1.0"
edition = "2021"
description = "Eagle Mode — zoomable user interface"

[lints]
workspace = true

[dependencies]
emcore = { workspace = true }
emmain = { path = "../emmain" }
winit = { workspace = true }
# Plugin cdylibs. Each plugin crate must be listed here so cargo builds it
# for all profiles (including --release). The binary finds the .so at runtime
# via RUNPATH=$ORIGIN:$ORIGIN/deps (set in build.rs). When adding a new plugin
# crate, add it here.
emfileman = { path = "../emfileman" }
emstocks = { path = "../emstocks" }

[dev-dependencies]
emcore = { workspace = true, features = ["test-support"] }
emtest = { path = "../emtest", features = ["test-support"] }
rand = { workspace = true }
slotmap = { workspace = true }
criterion = { workspace = true }
gungraun = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "interaction"
harness = false

[[bench]]
name = "interaction_iai"
harness = false

[[bench]]
name = "scaled_tree"
harness = false

[[bench]]
name = "scaled_tree_iai"
harness = false
