[package]
name = "emstocks"
version = "0.1.0"
edition = "2021"
description = "Eagle Mode emStocks — stock portfolio plugin"

[lib]
name = "emStocks"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
# Enables `_for_test` accessors and other helpers used by integration tests
# in `tests/`. Activated automatically via `dev-dependencies` self-reference.
test-support = []

[dependencies]
emcore = { workspace = true }
libc = { workspace = true }
arboard = { workspace = true }
open = { workspace = true }

[dev-dependencies]
emcore = { workspace = true, features = ["test-support"] }
emstocks = { path = ".", features = ["test-support"] }
gungraun = { workspace = true }
