[package]
name = "emtest"
version = "0.1.0"
edition = "2021"

[lib]
name = "emTestPanel"
crate-type = ["cdylib", "rlib"]

[features]
test-support = []

[lints]
workspace = true

[dependencies]
emcore = { path = "../emcore" }

[dev-dependencies]
emcore = { path = "../emcore", features = ["test-support"] }
